# shiden

./: Cargo.toml  Makefile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: check.yml
crates/shiden-core/: Cargo.toml
crates/shiden-core/src/: lib.rs  run.rs
examples/: demo.rs
src/: lib.rs  metrics.rs  run.rs  types.rs
src/collectors/: binance.rs  bybit.rs  coinbase.rs  mod.rs
src/engines/: price.rs
src/executors/: echo.rs
src/models/: event.rs  input.rs  mod.rs  output.rs  trade.rs
src/state_engines/: binance.rs  bybit.rs  price.rs
src/strategies/: echo.rs
